<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/midlle_gap"
        android:layout_marginBottom="@dimen/midlle_gap"
        android:fontFamily="monospace"
        android:text="@string/first_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/first_text"
        app:layout_constraintEnd_toEndOf="@+id/first_text"
        app:layout_constraintStart_toStartOf="@+id/first_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/midlle_gap"
        android:layout_marginEnd="@dimen/midlle_gap"
        android:layout_marginBottom="@dimen/small_gap"
        android:hint="@string/name_ehint"
        app:boxStrokeColor="@color/main_color"
        app:hintTextColor="@color/main_color"
        app:layout_constraintBottom_toTopOf="@+id/second_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/second_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/midlle_gap"
        android:layout_marginEnd="@dimen/midlle_gap"
        android:hint="@string/email_hint"
        app:boxStrokeColor="@color/main_color"
        app:hintTextColor="@color/main_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/third_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/midlle_gap"
        android:layout_marginTop="@dimen/small_gap"
        android:layout_marginEnd="@dimen/midlle_gap"
        android:hint="@string/number_hint"
        app:boxStrokeColor="@color/main_color"
        app:hintTextColor="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numberText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/actionNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:backgroundTint="@color/button_color"
        android:text="@string/save"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/third_text"
        app:layout_constraintStart_toStartOf="@+id/third_text"
        app:layout_constraintTop_toBottomOf="@+id/third_text" />


</androidx.constraintlayout.widget.ConstraintLayout>